[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-assetman"
description = "assetman assetmanager"
version = "0.3.0rc"
authors = [
  { name="Will McCutchen", email="wm@bit.ly" },
]
maintainers = [
  { name="Jehiah Czebotar", email="jehiah@gmail.com"},
  { name="Josh Harshman", email="josh.harshman@bit.ly"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
  "boto3==1.34.15",
  "botocore==1.34.15",
  "tornado==6.3.3",
]

[project.scripts]
assetman_compile = "assetman:assetman_compile"

[tool.setuptools.packages.find]
where = ["assetman"]
namespaces = false

